<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:text="@string/rule_detail_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.TileTitle"/>
        <RadioButton
            android:id="@+id/radio_type_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_detail_type_action"/>
        <RadioButton
            android:id="@+id/radio_type_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_detail_type_categories"/>
    </RadioGroup>
    <RelativeLayout
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_action"
            android:inputType="textUri"
            android:paddingStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:minLines="2"
            android:hint="@string/rule_detail_type_action"
            android:layout_toStartOf="@+id/linearLayout" />
        <LinearLayout
            android:background="@color/card_background_grey"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/linearLayout"
            android:gravity="center">
            <ImageButton
                android:id="@+id/button_copy"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_content_copy_black_24dp"
                android:contentDescription="@android:string/copy"
                style="@android:style/Widget.Material.Button.Borderless"/>
            <ImageButton
                android:id="@+id/button_paste"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_content_paste_black_24dp"
                android:contentDescription="@android:string/copy"
                style="@android:style/Widget.Material.Button.Borderless"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_cancel"
                android:text="@android:string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:buttonBarPositiveButtonStyle"/>
            <Button
                android:id="@+id/button_search"
                android:text="@android:string/search_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:buttonBarPositiveButtonStyle"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_delete"
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:buttonBarNeutralButtonStyle"/>
            <Button
                android:id="@+id/button_save"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:buttonBarNeutralButtonStyle"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>